# bpmn-generator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  debug_imports.py  pyproject.toml
docs/: LLM_PROVIDERS.md
docs/architecture/: 00_Marco_Inicio_Proyecto.md  01_Requisitos_funcionales_y_no_funcionales.md  02_Modelo_datos_y_estado.md  03_arquitectura_y_flujo.md  04_Especificación_de_Prompts_y_Orquestación.md
docs/plans/: 001_implement_pydantic_models.md  002_implement_utilities.md  003_implement_agents.md  004_implement_orchestration.md  README.md
prompts/base/: analyst_rules.txt
src/bpmn_generator/: __init__.py  main.py
src/bpmn_generator/agents/: analyst.py  chat.py  critic.py  generator.py
src/bpmn_generator/graph/: routers.py  workflow.py
src/bpmn_generator/models/: schema.py  state.py
src/bpmn_generator/utils/: bpmn_validator.py  layout.py  llm_provider.py  prompts.py
tests/integration/: test_workflow.py
tests/unit/agents/: __init__.py  test_critic.py  test_generator.py
tests/unit/models/: test_schema.py  test_schema_coverage.py  test_state.py
tests/unit/utils/: __init__.py  test_bpmn_validator.py  test_layout.py  test_prompts.py
